Use Gardevoir - The Modern CSS Reset

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Mikołaj Bartnicki</title>
+        <!-- Gardevoir - The Modern CSS Reset -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gardevoir">
     </head>
     <body>
         <h1>Mikołaj Bartnicki</h1>
