--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mikołaj Bartnicki</title>
         <!-- Gardevoir - The Modern CSS Reset -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gardevoir">
