Add CSS and use it for the website

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mikołaj Bartnicki</title>
         <!-- Gardevoir - The Modern CSS Reset -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gardevoir">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/gardevoir">
+        <link rel="stylesheet" type="text/css" href="mbrtnck.css">
+        <title>Mikołaj Bartnicki</title>
     </head>
     <body>
         <h1>Mikołaj Bartnicki</h1>
