--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <i>Mikołaj</i> is Polish equivalent of Greek name <i>Nikolaos</i>, meaning <q>victory to the people</q>. There is no short form of <i>Mikołaj</i> in Polish language, but there is a diminutive <i>Mikołajek</i> (pronunced <q>Mick-o-why-eck</q>) which means exactly <q>little Mikołaj</q>.
         </p>
         <p>
-        Family name <i>Bartnicki</i> derives from Polish word <i>bartnik</i> &ndash; a honey hunter. <i>Bartnicki</i> means <q>from the honey hunters</q> then. Such surname construction is quite common in Polish language.
+        Family name <i>Bartnicki</i> derives from Polish word <i>bartnik</i> &ndash; a honey hunter. <i>Bartnicki</i> means <q>from the honey hunters</q> then. Such construction is quite common in Polish language.
         </p>
         <p>
         Copyright &copy; 2023 <a href="mailto:mikolaj@bartnicki.org">Mikołaj Bartnicki</a><br>
