Add and use LikeTeX CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Gardevoir - The Modern CSS Reset -->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/gardevoir">
-        <link rel="stylesheet" type="text/css" href="mbrtnck.css">
+        <link rel="stylesheet" type="text/css" href="css/liketex.css">
         <title>Mikołaj Bartnicki</title>
     </head>
     <body>
