--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
         <title>Mikołaj Bartnicki</title>
     </head>
     <body>
-        <h1>Mikołaj Bartnicki</h1>
-        <p>sport shooter, guitarist, chess player</p>
-        <p>
-        The proper Polish pronunciation of my name is roughly <q>Mick-o-why Bartnitzky</q>.
-        </p>
-        <p>
-        <i>Mikołaj</i> is Polish equivalent of Greek name <i>Nikolaos</i>, meaning <q>victory to the people</q>. There is no short form of <i>Mikołaj</i> in Polish language, but there is a diminutive <i>Mikołajek</i> (pronunced <q>Mick-o-why-eck</q>) which means exactly <q>little Mikołaj</q>.
-        </p>
-        <p>
-        Family name <i>Bartnicki</i> derives from Polish word <i>bartnik</i> &ndash; a honey hunter. <i>Bartnicki</i> means <q>from the honey hunters</q> then. Such construction is quite common in Polish language.
-        </p>
-        <p>
-        Copyright &copy; 2023 <a href="mailto:mikolaj@bartnicki.org">Mikołaj Bartnicki</a><br>
-        All rights reserved.
-        </p>
+        <div class="content">
+
+            <h1>Mikołaj Bartnicki</h1>
+
+            <p style="text-align: center">engineer, sport shooter, guitarist, chess player</p>
+
+            <p>I come from and live in Poland, so I have Polish name. The proper Polish pronunciation of my name is roughly <q>Mick-o-why Bart-nit-ski</q>.</p>
+
+            <p><i>Mikołaj</i> is Polish equivalent of Greek name <i>Nikolaos</i>, meaning <q>victory to the people</q>. There is no short form of <i>Mikołaj</i> in Polish language, but there is a diminutive <i>Mikołajek</i> (pronunced <q>Mick-o-why-eck</q>) which means exactly <q>little Mikołaj</q>.</p>
+
+            <p>Family name <i>Bartnicki</i> derives from Polish word <i>bartnik</i> &ndash; a honey hunter. <i>Bartnicki</i> means <q>from the honey hunters</q> then. Such construction is quite common in Polish language.</p>
+
+            <p class="footer">Copyright &copy; 2023 <a href="mailto:mikolaj@bartnicki.org">Mikołaj Bartnicki</a><br>
+            All rights reserved.</p>
+
+        </div>
     </body>
 </html>
