Reword a sentence and reformat HTML code

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 
             <p>I come from and live in Poland, so I have Polish name. The proper Polish pronunciation of my name is roughly <q>Mick-o-why Bart-nit-ski</q>.</p>
 
-            <p><i>Mikołaj</i> is Polish equivalent of Greek name <i>Nikolaos</i>, meaning <q>victory to the people</q>. There is no short form of <i>Mikołaj</i> in Polish language, but there is a diminutive <i>Mikołajek</i> (pronunced <q>Mick-o-why-eck</q>) which means exactly <q>little Mikołaj</q>.</p>
+            <p><i>Mikołaj</i> is the Polish equivalent of the Greek name <i>Nikolaos</i>, meaning <q>victory to the people</q>. There is no short form of <i>Mikołaj</i> in Polish language, but we have a diminutive <i>Mikołajek</i> (pronunced <q>Mick-o-why-eck</q>) which means exactly <q>little Mikołaj</q>.</p>
 
             <p>Family name <i>Bartnicki</i> derives from Polish word <i>bartnik</i> &ndash; a honey hunter. <i>Bartnicki</i> means <q>from the honey hunters</q> then. Such construction is quite common in Polish language.</p>
 
-            <p class="footer">Copyright &copy; 2023 <a href="mailto:mikolaj@bartnicki.org">Mikołaj Bartnicki</a><br>
-            All rights reserved.</p>
+            <p class="footer">Copyright &copy; 2023 <a href="mailto:mikolaj@bartnicki.org">Mikołaj Bartnicki</a><br>All rights reserved.</p>
 
         </div>
     </body>
