--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         <link rel="stylesheet" type="text/css" href="css/liketex.css">
         <title>Mikołaj Bartnicki</title>
     </head>
-    <body>
+    <body style="background-image: url('img/bricks.jpeg')">
         <div class="content">
 
             <h1>Mikołaj Bartnicki</h1>
 
-            <p style="text-align: center">engineer, sport shooter, guitarist, chess player</p>
+            <p style="text-align: center; font-size: 1.3em">engineer, sport shooter, guitarist, chess player</p>
+
+            <img src="img/portrait.jpeg" alt="Mikołaj Bartnicki" style="margin:1em 0">
 
             <p>I come from and live in Poland, so I have Polish name. The proper Polish pronunciation of my name is roughly <q>Mick-o-why Bart-nit-ski</q>.</p>
 
